--- a/angular.json
+++ b/angular.json
@@ -52,6 +52,14 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "development": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ]
             }
           }
         },
@@ -63,6 +71,9 @@
           "configurations": {
             "production": {
               "browserTarget": "brew-monitor:build:production"
+            },
+            "development": {
+              "browserTarget": "brew-monitor:build:development"
             }
           }
         },
